# image_hosting_Flask

./: .gitignore  README.md  pyproject.toml
config/: config.py
data/: app.db.sqlite3
migrations/versions/: 28c40ecff675_add_model_picture.py  63f78443fa41_add_cookies_to_user.py  a09ac3a02ec2_initial_migration.py
src/: __init__.py  models.py  routes.py
src/libs/: file_service.py  validation_file.py  validation_sсhemas.py
src/repository/: pics.py  pictures.py  users.py
src/templates/: base.html
src/templates/pages/: edit.html  index.html  login.html  pictures.html  registration.html  upload.html
